[gd_scene load_steps=4 format=3 uid="uid://ddema45cs52wu"]

[ext_resource type="Script" path="res://scenes/ui/player/stats.gd" id="1_ypjyi"]

[sub_resource type="Gradient" id="Gradient_w2b6s"]
colors = PackedColorArray(0.733002, 1.64848e-06, 3.85046e-07, 1, 1, 0.0405029, 0.0223527, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vm12e"]
gradient = SubResource("Gradient_w2b6s")
fill_from = Vector2(0, 0.00970874)
fill_to = Vector2(1, 0.00970874)

[node name="Stats" type="CanvasLayer"]
script = ExtResource("1_ypjyi")

[node name="StaminaBar" type="TextureProgressBar" parent="."]
offset_left = 10.0
offset_top = 34.0
offset_right = 96.0
offset_bottom = 49.0

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 10.0
offset_top = 13.0
offset_right = 105.0
offset_bottom = 26.0
value = 100.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture2D_vm12e")

[node name="HealthRegen" type="Timer" parent="."]

[connection signal="timeout" from="HealthRegen" to="." method="_on_health_regen_timeout"]
